--- a/docs/docs/assets/css/overrides.scss
+++ b/docs/docs/assets/css/overrides.scss
@@ -1,58 +1,32 @@
----
----
-/*
- * Copyright (C) 2017/2021 e-voyageurs technologies
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-// Only use dark mode on screens
-@media (prefers-color-scheme: dark) {
-  [data-md-color-scheme="default"] {
-    @import "slate";
-  }
-}
-
-[data-md-color-scheme="dark"] {
-  @import "slate";
-}
-
-/* Badges */
-
+/* Base styles for badges */
 span.badge {
+  display: inline-block;
   font-family: "Open Sans", sans-serif;
-  padding: 2px 5px;
-  margin-right: 5px;
+  padding: 4px 10px;
+  margin: 0 5px 5px 0;
+  font-size: 0.85rem;
+  border-radius: 3px;
+  color: #fff;
+  font-weight: bold;
   text-transform: uppercase;
-  font-size: 1.0rem;
-  border-radius: 2px;
-  background: #eee;
-  font-weight: bold; }
-span.badge-primary {
-  background: #3c7dae;
-  color: #fff; }
-span.badge-secondary {
-  background: #999;
-  color: #fff; }
-span.badge-danger {
-  background: firebrick;
-  color: #fff; }
-span.badge-warning {
-  background: darkorange;
-  color: #fff; }
-span.badge-info {
-  background: royalblue;
-  color: #fff; }
-span.badge-success {
-  background: forestgreen;
-  color: #fff; }
+  background-color: #333; /* Default background */
+}
+
+/* Specific badge types */
+span.badge-version {
+  background-color: #3c7dae;
+}
+
+span.badge-default {
+  background-color: #999;
+}
+
+span.badge-none {
+  background-color: #f0f0f0;
+  color: #333;
+  border: 1px solid #ddd;
+}
+
+span.badge-insiders {
+  background-color: #d9534f;
+}
